fix: add visible placeholder color

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   }
   input::placeholder,
   textarea::placeholder {
-    @apply text-[var(--opposite-foreground-2)]
+    @apply text-[var(--foreground-2)]
   }
 }
 
